# keyremapper-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install-examples.sh  rustfmt.toml  start-evsniff.sh  start-keyboard-remapper.sh  start-myevtest.sh  start-satechi-remapper.sh  start-trackpoint-speedup.sh
examples/: myevtest.rs
examples/evsniff/: main.rs
examples/keyboard-remapper/: icons.gresource  main.rs  wheeler.rs
examples/satechi-remapper/: icons.gresource  main.rs
examples/shortcut-remote-remapper/: icons.gresource  main.rs  shortcut-remote-remapper.rs
examples/trackpoint-speedup/: icons.gresource  main.rs  trackpoint-speedup.rs
scripts/: gen_binding.py
src/: config.rs  core.rs  lib.rs  native.rs  select.rs  singleton.rs  udev.rs  wrapper.h
src/evdev/: device.rs  ec.rs  input_event.rs  linux_input-event-codes.h.rs  mod.rs  tracker.rs  uinput.rs
src/res/: icons.gresource  mod.rs
src/ui/: mod.rs
