[package]
name = "keyremapper"
version = "0.1.0"
authors = ["Makoto Onuki <makoto.onuki@gmail.com>"]
edition = "2018"

[lib]
name = "keyremapper"
path = "src/lib.rs"

[[example]]
name = "myevtest"
path = "examples/myevtest.rs"

[[example]]
name = "shortcut-remote-remapper"
path = "examples/shortcut-remote-remapper/shortcut-remote-remapper.rs"

[dependencies]
anyhow = "1"
clap="2"
c_string = "0.7"
env_logger = "0.8"
errno = "0.2"
error-chain="0.12"
gio = "0.9"
glib = "0.10"
glob = "0.3"
gtk = "0.9"
itertools = "0.10"
lazy_static="1"
libappindicator = "0.5"
libc = "0.2"
log = "0.4"
natord = "1"
nix = "0.19"
notify-rust = "4"
parking_lot="0.11"
phf = { version = "0.8", features = ["macros"] }
rand="0.8"
regex = "1"

[build-dependencies]
# gtk depends on this version.
bindgen = "0.52"
regex = "1"
