[package]
name = "keyremapper"
version = "0.1.0"
authors = ["Makoto Onuki <makoto.onuki@gmail.com>"]
edition = "2018"

[lib]
name = "keyremapper"
path = "src/lib.rs"

[[example]]
name = "myevtest"
path = "examples/myevtest.rs"

[[example]]
name = "keyboard-remapper"
path = "examples/keyboard-remapper/main.rs"

[[example]]
name = "shortcut-remote-remapper"
path = "examples/shortcut-remote-remapper/main.rs"

[[example]]
name = "trackpoint-speedup"
path = "examples/trackpoint-speedup/main.rs"

[[example]]
name = "satechi-remapper"
path = "examples/satechi-remapper/main.rs"

[dependencies]
anyhow = "1"
clap="2"
c_string = "0.7.0"
env_logger = "0.8.2"
errno = "0.2.7"
gio = "0.9.1"
glib = "0.10.3"
glob = "0.3.0"
gtk = "0.9.2"
gtk-sys = "0.10.0"
itertools = "0.10.0"
lazy_static="1"
libappindicator = "0.5.2"
libc = "0.2.82"
log = "0.4.13"
natord = "1"
nix = "0.19.1"
notify-rust = "4"
parking_lot="0.11.1"
phf = { version = "0.8", features = ["macros"] }
rand="0.8.2"
regex = "1"
x11rb = "0.3.0"

[build-dependencies]
# gtk depends on this version.
bindgen = "0.52.0"
regex = "1"
