[package]
name = "keyremapper"
version = "0.1.0"
authors = ["Makoto Onuki <makoto.onuki@gmail.com>"]
edition = "2018"

[lib]
name = "keyremapper"
path = "src/lib.rs"

[[example]]
name = "myevtest"
path = "examples/myevtest.rs"

[[example]]
name = "evsniff"
path = "examples/evsniff/main.rs"

[[example]]
name = "keyboard-remapper"
path = "examples/keyboard-remapper/main.rs"

[[example]]
name = "shortcut-remote-remapper"
path = "examples/shortcut-remote-remapper/main.rs"

[[example]]
name = "trackpoint-speedup"
path = "examples/trackpoint-speedup/main.rs"

[[example]]
name = "satechi-remapper"
path = "examples/satechi-remapper/main.rs"

[dependencies]
anyhow = "1.0.38"
clap="2.33.3"
c_string = "0.7.2"
env_logger = "0.9"
errno = "0.2.7"
gio = "0.15"
glib = "0.15"
glob = "0.3.0"
gtk = "0.15"
itertools = "0.10.0"
lazy_static="1.4.0"
libappindicator = "0.7.1"
libc = "0.2.82"
log = "0.4.13"
natord = "1.0.9"
nix = "0.25"
notify-rust = "4.2.2"
parking_lot="0.12"
phf = { version = "0.11", features = ["macros"] }
rand="0.8.2"
regex = "1.4.3"
signal-hook = "0.3.4"
x11 = "2.18.2"

[build-dependencies]
bindgen = "0.71.1"
regex = "1.4.3"
